# file-system-recovery-tool

./: .gitignore  CMakeLists.txt  COMPACTION_GUIDE.md  CORRUPTION_EMERGENCY.md  MACOS_FIX.md  MULTISELECT_BLOCKS.md  QUICKSTART.md  README.md  SEGFAULT_FIX.md  UI_FIXES.md  UI_PERFORMANCE_FIXES.md
include/: BlockMapWidget.h  ControlPanel.h  DefragManager.h  Directory.h  FileBrowserWidget.h  FileSystem.h  Inode.h  Journal.h  MainWindow.h  PerformanceWidget.h  RecoveryManager.h  VirtualDisk.h
src/: BlockMapWidget.cpp  ControlPanel.cpp  DefragManager.cpp  Directory.cpp  FileBrowserWidget.cpp  FileSystem.cpp  Inode.cpp  Journal.cpp  MainWindow.cpp  PerformanceWidget.cpp  RecoveryManager.cpp  VirtualDisk.cpp  main.cpp
